syntax = "proto3";

package stats.message;

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

enum ActionTypeProto {
    ACTION_VIEW = 0; // просмотр страницы мероприятия;
    ACTION_REGISTER = 1; // заявка на участие в мероприятии;
    ACTION_LIKE = 2; // положительная оценка/лайк мероприятию.
}