syntax = "proto3";

package stats.message;

import "google/protobuf/timestamp.proto";
import "stats/messages/action_type.proto";

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

message UserActionProto {
    int64 user_id = 1; // идентификатор пользователя, совершившего действие;
    int64 event_id = 2; // идентификатор мероприятия, с которым связано действие;
    ActionTypeProto action_type = 3; // тип действия
    google.protobuf.Timestamp timestamp = 4; // временна́я метка, указывающая время действия.
}
